se agregan descripción imagenes y titulo al iframe

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 		<section id="interes" class="clearfix">
 			<div class="row">
 				<h1>Sitios de interés</h1>
-				<div class="col col_1-5"><a href="https://google.com.mx" alt="" class="card" target="_blank" ><img src="src/interes1.png" height="112" width="320"  /><span class="int_desc">Google</span></a></div>
-				<div class="col col_1-5"><a href="https://validator.w3.org/" alt="" class="card" target="_blank" ><img src="src/interes2.png" /><span class="int_desc">Validador HTML del W3C</span></a></div>
-				<div class="col col_1-5"><a href="https://webaim.org/resources/contrastchecker/" alt="" class="card" target="_blank" ><img src="src/interes3.png" /><span class="int_desc">Webaim Contrast Checker</span></a></div>
-				<div class="col col_1-5"><a href="https://nvda.es/descargas/descarga-de-nvda/" alt="" class="card" target="_blank" ><img src="src/interes4.png"  /><span class="int_desc">Descarga oficial de NVDA</span></a></div>
-				<div class="col col_1-5"><a href="https://www.hearcolors.com.mx/web/inicio" alt="" class="card" target="_blank" ><img src="src/interes5.png"  /><span class="int_desc">Hearcolors</span></a></div>
+				<div class="col col_1-5"><a href="https://google.com.mx" class="card" target="_blank" title="se abrira en otra pestaña"><img alt="" src="src/interes1.png" height="112" width="320" alt=""s  /><span class="int_desc">Google</span></a></div>
+				<div class="col col_1-5"><a href="https://validator.w3.org/" class="card" target="_blank" title="se abrira en otra pestaña"><img alt="" src="src/interes2.png" /><span class="int_desc">Validador HTML del W3C</span></a></div>
+				<div class="col col_1-5"><a href="https://webaim.org/resources/contrastchecker/" class="card" target="_blank" title="se abrira en otra pestaña"><img alt="" src="src/interes3.png" /><span class="int_desc">Webaim Contrast Checker</span></a></div>
+				<div class="col col_1-5"><a href="https://nvda.es/descargas/descarga-de-nvda/"  class="card" target="_blank" title="se abrira en otra pestaña"><img alt="" src="src/interes4.png"  /><span class="int_desc">Descarga oficial de NVDA</span></a></div>
+				<div class="col col_1-5"><a href="https://www.hearcolors.com.mx/web/inicio"  class="card" target="_blank" title="se abrira en otra pestaña"><img alt="" src="src/interes5.png"  /><span class="int_desc">Hearcolors</span></a></div>
 			</div>
 		</section>
 		
@@ -99,13 +99,14 @@
 			</div>
 			<div id="redes_sociales" class="col col_1-5">
 				<p>
-					<a href="https://facebook.com" target="_blank" ><img alt="facebook de mi sitio" src="src/ico_facebook_w.png" /></a>
-					<a href="https://twitter.com" target="_blank" ><img alt="Twitter de mi sitio"src="src/ico_twitter_w.png" /></a>
-					<a href="https://youtube.com" target="_blank" ><img alt="youtube de mi sito" src="src/ico_youtube_w.png" /></a>
-					<a href="https://instagram.com" target="_blank" ><img alt="instagram de mi sito" src="src/ico_instagram_w.png" /></a>
-					<a href="https://linkedin.com" target="_blank" ><img alt="linkedin de mi sitio" src="src/ico_linkedin_w.png" /></a>
-					<a href="https://web.whatsapp.com" target="_blank" ><img alt="whatsapp de mi sitio" src="src/ico_whatsapp_w.png" /></a>
-					<a href="https://pinterest.com" target="_blank" ><img alt="pinterest de mi sitio" src="src/ico_pinterest_w.png" /></a>
+					<a href="https://facebook.com" target="_blank" title="se abrira en otra pestaña"><img alt="Facebook de Mi Web" src="src/ico_facebook_w.png" /></a>
+					<a href="https://twitter.com" target="_blank" title="se abrira en otra pestaña"><img alt="Twitter de Mi Web" src="src/ico_twitter_w.png" /></a>
+					<a href="https://youtube.com" target="_blank" title="se abrira en otra pestaña"><img alt="Youtube de Mi Web" src="src/ico_youtube_w.png" /></a>
+					<a href="https://instagram.com" target="_blank" title="se abrira en otra pestaña" ><img alt="Instagram de Mi Web" src="src/ico_instagram_w.png" /></a>
+					<a href="https://linkedin.com" target="_blank" title="se abrira en otra pestaña"><img alt="Linkedin de Mi Web" src="src/ico_linkedin_w.png" /></a>
+					<a href="https://web.whatsapp.com" target="_blank" title="se abrira en otra pestaña"><img  alt="Whatsapp de Mi Web" src="src/ico_whatsapp_w.png" /></a>
+					<a href="https://pinterest.com" target="_blank" title="se abrira en otra pestaña"><img alt="Pinterest de Mi Web" src="src/ico_pinterest_w.png" /></a>
+				
 				</p>
 			</div>
 		</div>
