se modifica footer con accesibilidad en todas las paginas

--- a/registro.html
+++ b/registro.html
@@ -161,13 +161,13 @@
 			</div>
 			<div id="redes_sociales" class="col col_1-5">
 				<p>
-					<a href="https://facebook.com" target="_blank" ><img src="src/ico_facebook_w.png" /></a>
-					<a href="https://twitter.com" target="_blank" ><img src="src/ico_twitter_w.png" /></a>
-					<a href="https://youtube.com" target="_blank" ><img src="src/ico_youtube_w.png" /></a>
-					<a href="https://instagram.com" target="_blank" ><img src="src/ico_instagram_w.png" /></a>
-					<a href="https://linkedin.com" target="_blank" ><img src="src/ico_linkedin_w.png" /></a>
-					<a href="https://web.whatsapp.com" target="_blank" ><img src="src/ico_whatsapp_w.png" /></a>
-					<a href="https://pinterest.com" target="_blank" ><img src="src/ico_pinterest_w.png" /></a>
+					<a href="https://facebook.com" target="_blank" title="se abrira en otra pestaña"><img alt="Facebook de Mi Web" src="src/ico_facebook_w.png" /></a>
+					<a href="https://twitter.com" target="_blank" title="se abrira en otra pestaña"><img alt="Twitter de Mi Web" src="src/ico_twitter_w.png" /></a>
+					<a href="https://youtube.com" target="_blank" title="se abrira en otra pestaña"><img alt="Youtube de Mi Web" src="src/ico_youtube_w.png" /></a>
+					<a href="https://instagram.com" target="_blank" title="se abrira en otra pestaña" ><img alt="Instagram de Mi Web" src="src/ico_instagram_w.png" /></a>
+					<a href="https://linkedin.com" target="_blank" title="se abrira en otra pestaña"><img alt="Linkedin de Mi Web" src="src/ico_linkedin_w.png" /></a>
+					<a href="https://web.whatsapp.com" target="_blank" title="se abrira en otra pestaña"><img  alt="Whatsapp de Mi Web" src="src/ico_whatsapp_w.png" /></a>
+					<a href="https://pinterest.com" target="_blank" title="se abrira en otra pestaña"><img alt="Pinterest de Mi Web" src="src/ico_pinterest_w.png" /></a>
 				</p>
 			</div>
 		</div>
