--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</div>
 		<div id="menubar">
 			<ul>
-				<li><a href="/miweb">Inicio</a></li>
+				<li><a href="index.html">Inicio</a></li>
 				<li><a href="nosotros.html">Nosotros</a></li>
 				<li>
 					<a href="#" onclick="preventDefault(e);" class="dropdown">Tienda</a>
@@ -40,6 +40,7 @@
 			<ul id="menuSalto">
 				<li><a href="#" id="sitio" >Saltar a Sitios de Interes</a></li>
 				<li><a href="#"id="pie" >Saltar a Pie de Pagina</a></li>
+				<li><a href="mapaSitio.html">Mapa de Sitio</a></li>
 			</ul>
 		</div>
 		<script src="menu/menu.js"></script>
