tabla con accesibilidad

--- a/productos.html
+++ b/productos.html
@@ -20,7 +20,7 @@
 		</div>
 		<div id="menubar">
 			<ul>
-				<li><a href="index.html">Inicio</a></li>
+				<li><a href="/miweb">Inicio</a></li>
 				<li><a href="nosotros.html">Nosotros</a></li>
 				<li>
 					<a href="#" onclick="preventDefault(e);" class="dropdown">Tienda</a>
