--- a/registro.html
+++ b/registro.html
@@ -45,7 +45,7 @@
 			<div id="mensajes"></div>
 			<form action="#" action="post" name="registro">
 				
-				<table>
+				<table role="presentation">
 					<tr>
 					<td><label for="nombre">*Nombre: </label></td>
 					<td>
